<?xml version="1.0"?>
<package>
  <name>sawyer_humcpp</name>
  <version>0.0.0</version>
  <description>Interaction Control for Sawyer with Human Subject</description>
  <maintainer email="k-fitzsimons@u.northestern.edu"> Katie Fitzsimons</maintainer>
  <license>GPLv3</license>
  <!-- <url type="website">http://ros.org/wiki/pend_tracker</url> -->
  <author email="k-fitzsimons@u.northwestern.edu"> Katie Fitzsimons</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>intera_interface</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
   <run_depend>genmsg</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_motion_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>joystick_drivers</run_depend>

</package>
